<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="com.example.android.kys.HomeActivity">

    <Button
        android:id="@+id/button_open_learn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:text="@string/learn"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_tests_configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_test_question"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tests_configuration"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text_test_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner_test_question"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_marginTop="26dp"
        android:text="@string/question"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_test_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_test_answers"
        android:layout_alignStart="@+id/text_test_question"
        android:backgroundTint="@color/colorWhite"
        android:entries="@array/questions_values"
        android:popupBackground="@color/colorDarkGrey"
        android:prompt="@string/questions_prompt"
        android:scrollbarSize="50dp" />

    <TextView
        android:id="@+id/text_test_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner_test_answers"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="26dp"
        android:text="@string/answers"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_test_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_open_test"
        android:layout_alignStart="@+id/text_tests_configuration"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/colorWhite"
        android:entries="@array/questions_values"
        android:popupBackground="@color/colorDarkGrey"
        android:prompt="@string/answers_prompt"
        android:scrollbarSize="50dp" />

    <Button
        android:id="@+id/button_open_test"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:text="@string/test"
        android:textAllCaps="false"
        android:textSize="30sp" />

</RelativeLayout>